# mhd

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  dconfig
docs/: atmosphere.ipynb  brio_wu_shock_tube.ipynb  sod_shock_tube.ipynb
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  annotated.html  calc_8cpp.html  calc_8cpp_8o_8d.html  calc_8cpp__incl.map  calc_8cpp__incl.md5  calc_8hpp.html  calc_8hpp__dep__incl.map  calc_8hpp__dep__incl.md5  calc_8hpp__incl.map  calc_8hpp__incl.md5  calc_8hpp_source.html  classMHD_1_1Calc-members.html  classMHD_1_1Calc.html  classMHD_1_1Exception-members.html  classMHD_1_1Exception.html  classMHD_1_1Grid-members.html  classMHD_1_1Grid.html  classMHD_1_1Logger-members.html  classMHD_1_1Logger.html  classMHD_1_1Profile-members.html  classMHD_1_1Profile.html  classScalarField-members.html  classScalarField.html  classVec3-members.html  classVec3.html  classVectorField.html  classes.html  constants_8hpp.html  constants_8hpp_source.html  dir_000002_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_000011_000009.html  dir_000011_000012.html  dir_000012_000009.html  dir_1dd6db5a2b4f9ee0f53b77c34f91ef4b.html  dir_4e7c8c4fc0d923782da8a23d70a9725b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  (+99 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  (+30 more)
docs/latex/: annotated.tex  calc_8cpp.tex  calc_8cpp_8o_8d.tex  calc_8cpp__incl.md5  calc_8hpp.tex  calc_8hpp__dep__incl.md5  calc_8hpp__incl.md5  classMHD_1_1Calc.tex  classMHD_1_1Exception.tex  classMHD_1_1Grid.tex  classMHD_1_1Logger.tex  classMHD_1_1Profile.tex  classScalarField.tex  classVec3.tex  classVectorField.tex  constants_8hpp.tex  dir_1dd6db5a2b4f9ee0f53b77c34f91ef4b.tex  dir_4e7c8c4fc0d923782da8a23d70a9725b.tex  dir_4fef79e7177ba769987a8da36c892c5f.tex  dir_65ebcb01e8165f86acab37959cbefcca.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_ad1f68e25b2d30b3848485b6d9840ae6.tex  dir_b65d2de451fce0e7507c47d5aa0f9ef0.tex  dir_b65d2de451fce0e7507c47d5aa0f9ef0_dep.md5  dir_d429893c1feff46fb6570f8eac336791.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_da61e3e9a357748887e3ca8d7c5a0c16.tex  dir_da61e3e9a357748887e3ca8d7c5a0c16_dep.md5  error_8cpp.tex  error_8cpp_8o_8d.tex  error_8hpp.tex  error_8hpp__dep__incl.md5  exception_8cpp.tex  exception_8cpp_8o_8d.tex  exception_8hpp.tex  exception_8hpp__dep__incl.md5  exception_8hpp__incl.md5  field_8hpp.tex  field_8hpp__incl.md5  (+32 more)
include/: calc.hpp  domain.hpp  error.hpp  grid.hpp  profile.hpp  profile.hpp~  profile_options.hpp  solver.hpp
src/: CMakeLists.txt  api_safe.cpp  calc.cpp  main.cpp  profile.cpp
src/api/: CMakeLists.txt  calc.cpp  domain.cpp  domain_impl.cpp  domain_impl.hpp  exception.hpp  grid.cpp  profile.cpp  results.csv  safe.cpp  solver.cpp
src/api/include/: exception.hpp  logger.hpp  safe.hpp
src/grid/: 1d.cpp  1d.hpp  CMakeLists.txt  cartesian.cpp  cell.cpp  cell.hpp  face.hpp  grid.cpp  grid.hpp  grid_factory.cpp  grid_factory.hpp  grid_impl.hpp
src/grid/cartesian/: 1d.cpp  1d.hpp  2d.cpp  2d.hpp  3d.cpp  3d.hpp  CMakeLists.txt
src/grid/include/: cartesian.hpp  grid.hpp
src/include/: api_safe.hpp  calc.hpp  error.hpp  exception.hpp  logger.hpp  profile.hpp  profile_options.hpp
src/other/: field.hpp
src/solver/: CMakeLists.txt  boundary_condition.cpp  boundary_condition.hpp  context.hpp  electric_field.hpp  execution_controller.cpp  execution_controller.hpp  finite_difference.hpp  flux_scheme.cpp  flux_scheme.hpp  integration.hpp  kernels.hpp  reconstruction.cpp  reconstruction.hpp  residual.hpp  solver.cpp  solver.hpp  solver_impl.cpp  solver_impl.hpp  state.hpp  thermo_data.cpp  thermo_data.hpp  variable_store.hpp
src/solver/boundary_condition/: boundary_condition.cpp  boundary_condition.hpp
src/solver/flux/: flux_scheme.cpp  flux_scheme.hpp
src/solver/integration/: integration.hpp
src/solver/reconstruction/: reconstruction.cpp  reconstruction.hpp
src/solver/thermo/: perfect_gas_kernels.hpp
src/utilities/: CMakeLists.txt  constants.hpp  point.cpp  point.hpp  vector.cpp  vector.hpp
test/: CMakeLists.txt  api_tests.cpp  grid_tests.cpp  solver_tests.cpp
